# aind-data-transfer-ui-demo

./: README.md  pyproject.toml
.github/workflows/: tag_and_publish.yml
docs/source/: conf.py
src/aind_data_transfer_ui_demo/: __init__.py
src/aind_data_transfer_ui_demo/fast_ui/: server.py  shared.py
src/aind_data_transfer_ui_demo/fast_ui/routers/: forms.py  users.py
src/aind_data_transfer_ui_demo/jsonschema/: alpaca_forms_demo.html  json_editor_demo.html
src/aind_data_transfer_ui_demo/models/: basic_upload_job_configs.py  generate_schemas.py  modality_configs.py  simple.py  submit_job_request.py
src/aind_data_transfer_ui_demo/models/schemas/: BasicUploadJobConfigs.json  BasicUploadJobConfigsFastUI.json  BasicUploadJobConfigsSimple.json  ModalityConfigsFastUI.json  SubmitJobRequest.json  SubmitJobRequestFastUI.json  SubmitJobRequestSimple.json
src/aind_data_transfer_ui_demo/streamlit_pydantic/: demo.py  hello_world.py
src/aind_library_template/: message_handlers.py
